--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AppController!{% endblock %}
+{% block title %}Yndeed{% endblock %}
 
 {% block body %}
 <style>
@@ -9,12 +9,19 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Yndeed ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/Applications/MAMP/htdocs/ProjetSymfony/QueDuSalePHP/src/Controller/AppController.php'|file_link(0) }}">src/Controller/AppController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/Applications/MAMP/htdocs/ProjetSymfony/QueDuSalePHP/templates/app/index.html.twig'|file_link(0) }}">templates/app/index.html.twig</a></code></li>
-    </ul>
+    Wsh la zone
 </div>
+
+{% for offre in offres %}
+<offre>
+    <h2>Nom de l'offre</h2>
+        <div class="content">
+        <p>blballfgelfle des lignes</p>
+        </div>
+        </offre>
+
+{% endfor %}
+
 {% endblock %}
