--- a/templates/app/offre.html.twig
+++ b/templates/app/offre.html.twig
@@ -16,7 +16,7 @@
     <div class="card-body">
         <h3 class="card-title text-center mb-4">{{ offre.title }}</h3>
         <h6 class="mb-4">Localisation : {{ offre.adresse }}, {{ offre.CodePostal }},  {{ offre.ville }}</h6>
-        <p class="card-text">Contrat :  offre.contrat_typt_id, offre.contrat_type</p>
+        <p class="card-text">Contrat :  {{ offre.contrat }}</p>
         <p class="card-text">Offre créée le {{ offre.DateCreation | date('d/m/Y') }} à {{ offre.DateCreation | date('H:i') }}, Termine le {{ offre. FinMission | date('d/m/Y') }} à {{ offre. FinMission | date('H:i') }}  (Mise à jour le {{ offre.UpdateDate | date('d/m/Y') }})</p>
         <p class="card-text mt-5">{{ offre.description }}</p>
         <br>
