--- a/templates/app/index.html.twig
+++ b/templates/app/index.html.twig
@@ -13,6 +13,7 @@
 
 <div class="container mt-3"> 
 
+<a href="{{ path('addOffre')}}" class="btn btn-danger">Ajouter une offre</a>
 
 {% for offre in offres %}
 <div class="card mt-2">
