Added modification offre

--- a/templates/app/offre.html.twig
+++ b/templates/app/offre.html.twig
@@ -22,6 +22,7 @@
         <br>
         <div class="text-center">
         <a href="#" class="btn btn-primary">Postuler</a>
+        <a href="editOffre/{{ offre.id }}" class="btn btn-success">Modifier l'offre</a>
         </div>
         <div class="mt-5">
         <a href="../" class"btn btn-primary">< Retour à la liste des offres</a>
