--- a/templates/app/offre.html.twig
+++ b/templates/app/offre.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Offre numéro id{% endblock %}
+{% block title %}Offre numéro {{ offre.id }} {% endblock %}
 
 {% block body %}
 <div class="d-flex justify-content-center mt-3">
@@ -22,7 +22,7 @@
         <br>
         <div class="text-center">
         <a href="#" class="btn btn-primary">Postuler</a>
-        <a href="editOffre/{{ offre.id }}" class="btn btn-success">Modifier l'offre</a>
+        <a href="offre/editOffre/{{ offre.id }}" class="btn btn-success">Modifier l'offre</a>
         </div>
         <div class="mt-5">
         <a href="../" class"btn btn-primary">< Retour à la liste des offres</a>
