--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -4,6 +4,20 @@
 
 {% block body %}
 <div class="container">
-<h2 class="text-center mt-3">Inscription sur le site</h2>
+    <h2 class="text-center mt-3">Inscription sur le site</h2>
+
+     {{ form_start(formRegister) }}
+
+    {{ form_row(formRegister.username, {'label': "Nom d\'utilisateur"}) }}
+    {{ form_row(formRegister.firstName, {'label': "Prénom"}) }}
+    {{ form_row(formRegister.lastName, {'label': "Nom"}) }}
+    {{ form_row(formRegister.email, {'label': "Adresse e-mail"}) }}
+    {{ form_row(formRegister.password, {'label': "Mot de passe"}) }}
+    {{ form_row(formRegister.confirm_password, {'label': "Confirmer le mot de passe"}) }}
+
+    <button type="submit" class="btn btn-primary">S'inscrire</button>
+
+    {{ form_end(formRegister) }}
+
 </div>
 {% endblock %}
