--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,10 +4,19 @@
 
 {% block body %}
     <div class="container">
-        <h2 class="text-center mt-3">Connexion</h2>
+        <h2 class="text-center mt-3 mb-3">Connexion</h2>
 
-        <form action="">
-        <div class="form-group">
+        <form action="{{ path('login') }}" method="post">
+        <div class="form-group w-50 mx-auto">
+            <input placeholder="Adresse E-mail" required type="text" class="form-control" name="_username"> 
         </div>
+            <div class="form-group w-50 mx-auto">
+            <input placeholder="Mot de passe" required type="password" class="form-control" name="_password"> 
+        </div>
+
+        <div class="form-group text-center">
+            <button type="submit" class="btn btn-primary">Se connecter</button>
+            <a href="{{ path('register')}}" class="btn btn-success">S'inscrire</a>
+        </button>
     </div>
 {% endblock %}
