--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,9 @@
 	  <li class="nav-item">
         <a class="nav-link" href="{{ path('addOffre')}}" >Ajouter une offre</a>
       </li>
+    	  <li class="nav-item">
+            <a class="nav-link" href="{{ path('manageOffre')}}" >Voir mes offres</a>
+      </li>
     </ul>
   </div>
 </nav>
