Added Admin register roles not working yet

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,7 +20,9 @@
 
         <div class="form-group text-center">
             <button type="submit" class="btn btn-primary">Se connecter</button>
+            {% if app.request.get('_route') == 'login' %}
             <a href="{{ path('register')}}" class="btn btn-success">S'inscrire</a>
+            {% endif %}
         </button>
     </div>
 {% endblock %}
