--- a/templates/app/manageOffre.html.twig
+++ b/templates/app/manageOffre.html.twig
@@ -9,6 +9,7 @@
     <p class="text-center">Vous n'avez pour l'instant créé aucune offre</p>
 {% endif %}
 
+{% if is_granted('ROLE_USER') %}
 {% for offre in offres %}
 <div class="card mt-2">
   <div class="card-body">
@@ -20,6 +21,20 @@
   </div>
 </div>
 {% endfor %}
+
+{% elseif is_granted('ROLE_ADMIN') %}
+  {% for offre in offresAll %}
+<div class="card mt-2">
+  <div class="card-body">
+    <h5 class="card-title">{{ offre.title }}</h5>
+    <h6>{{ offre.CodePostal }},  {{ offre.ville }}</h6>
+    <p class="card-text">Type de contrat :    {{ offre.Contrat }}</p>
+    <p class="card-text">Contrat créé le : {{ offre.DateCreation | date('d/m/Y') }}, prend fin le {{ offre.FinMission | date('d/m/Y') }}</p>
+    <a href="offre/{{ offre.id }}" class="btn btn-primary">Voir l'offre</a>
+  </div>
+</div>
+{% endfor %}
+{% endif %}
 
 </div>
 
