--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,11 @@
         <a class="nav-link" href="{{ path('addOffre')}}" >Ajouter une offre</a>
       </li>
     	  <li class="nav-item">
+        {% if is_granted('ROLE_ADMIN') %}
+        <a class="nav-link" href="{{ path('manageOffreAdmin')}}" >Voir mes offres</a>
+        {% else %}
             <a class="nav-link" href="{{ path('manageOffre')}}" >Voir mes offres</a>
+        {% endif %}
       </li>
     </ul>
   </div>
